Import of MTHURN/Lingua-Alphabet-Phonetic-0.054 from CPAN.
gitpan-cpan-distribution: Lingua-Alphabet-Phonetic
gitpan-cpan-version:      0.054
gitpan-cpan-path:         MTHURN/Lingua-Alphabet-Phonetic-0.054.tar.gz
gitpan-cpan-author:       MTHURN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2007-04-21    <Daddy@C-3PO>
+
+	* lib/Lingua/Alphabet/Phonetic.pm: add pod for new()
+
 2006-10-07    <Daddy@C-3PO>
 
 	* lib/Lingua/Alphabet/Phonetic/NATO.pm: updated the "See Also" section
