Import of MTHURN/Lingua-Alphabet-Phonetic-0.056 from CPAN.
gitpan-cpan-distribution: Lingua-Alphabet-Phonetic
gitpan-cpan-version:      0.056
gitpan-cpan-path:         MTHURN/Lingua-Alphabet-Phonetic-0.056.tar.gz
gitpan-cpan-author:       MTHURN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2008-03-05    <Daddy@C-3PO>
+
+	* Kwalitee upgrades
+
 2007-04-21    <Daddy@C-3PO>
 
 	* lib/Lingua/Alphabet/Phonetic.pm: add pod for new()
